Amend butterfly banner image by cropping original image size to ensure butterfly is visible on all devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,8 @@
 
 .butterfly-banner {
         grid-area: header;
-        background: url("/assets/images/butterfly_banner.jpg") no-repeat center center; 
-        -webkit-background-size: 100% 100%;
-        -moz-background-size: 100% 100%;
-        -o-background-size: 100% 100%;
-        background-size: 100% 100%;
+        background: url("/assets/images/butterfly_banner.jpg") no-repeat;
+        background-size: cover;
 }
 
 /*-----------------------------index.html-------------------------------------*/
